--- a/index.html
+++ b/index.html
@@ -345,8 +345,8 @@ print(df_personas.loc[indice_max_edad])</pre></div><button class="action-button"
             step8: ["read_excel"],
             step9: ["head"],
             step10: ["tail"],
-            step11: ["['Nombre']"], // Aceptar comillas simples o dobles
-            step12: ["[['Nombre', 'Ciudad']]"], // Aceptar comillas simples o dobles
+            step11: [['Nombre']], // Aceptar comillas simples o dobles
+            step12: [[['Nombre', 'Ciudad']]], // Aceptar comillas simples o dobles
             step13: ["columns"],
             step14: [">"],
             step15: ["=="],
